# aws-central-infrastructure

./: .coderabbit.yaml  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  README.md  mutex_queue  pyproject.toml  pyrightconfig.json  ruff-non-src.toml  ruff.toml
.claude/commands/: add-command.md  commit.md  create-issues.md  green.md  issue.md  polish.md  red.md  refactor.md  research.md  spike.md  tdd-review.md  tdd.md
.claude/hooks/: bash-chain-guard.js  caveman-activate.js  caveman-mode-tracker.js
.claude/settings/: hooks.jsonc
.claude/settings/permissions/: bash.jsonc
.devcontainer/: Dockerfile  create-aws-profile.sh  devcontainer.json  docker-compose.yml  install-ci-tooling.py  install-ci-tooling.sh  manual-setup-deps.py  manual-setup-deps.sh  on-create-command.sh  post-start-command.sh
.github/: dependabot.yml
.github/actions/check-skip-duplicates/: action.yml
.github/actions/ecr-auth/: action.yml
.github/actions/install_deps/: action.yml
.github/actions/install_deps_uv/: action.yml  install-ci-tooling.ps1  manual-setup-deps.ps1
.github/actions/pulumi_ephemeral_deploy/: action.yml
.github/actions/update-devcontainer-hash/: action.yml
.github/reusable_workflows/: hash_git_files.py
.github/workflows/: ci.yaml  confirm-on-tagged-copier-template.yaml  get-values.yaml  hash_git_files.py  pre-commit.yaml  pulumi-aws.yml
scripts/: delete_false_positive_rej.py
src/aws_central_infrastructure/: constants.py  deploy_artifact_stores.py  deploy_central_networking.py  deploy_iac_management.py  deploy_identity_center.py
src/aws_central_infrastructure/artifact_stores/: ami_sharing.py  container_registries.py  internal_packages.py
src/aws_central_infrastructure/artifact_stores/lib/: __init__.py  code_artifact.py  ecr.py  image_builder.py  program.py  pulumi_deploy.py  (+1 more)
src/aws_central_infrastructure/central_networking/: subnets.py
src/aws_central_infrastructure/github_repos/: collaborators.py  repos.py  teams.py
src/aws_central_infrastructure/iac_management/: github_oidc.py  github_oidc_lib.py  program.py  pulumi_bootstrap.py  shared_lib.py  workload_params.py
src/aws_central_infrastructure/identity_center/: cloud_courier_permissions.py  lib.py  permissions.py  program.py  users.py
tests/unit/artifact_stores/: test_image_builder.py
tests/unit/github_repos/: test_teams.py
(+31 files in other folders)
