[project]
name = "aws-central-infrastructure"
version = "0.1.0"
description = "Managing the non-management-account Central Infrastructure for an AWS Organization"

readme = "README.md"
requires-python = ">=3.13.1"

dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pyright>=1.1.408",
    "ty>=0.0.32",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "syrupy>=5.1.0",
    "pulumi>=3.231.0",
    "pulumi-aws>=7.26.0",
    "pulumi-aws-native>=1.62.0",
    "pulumi-command>=1.2.1",
    "pulumi-github>=6.12.1",
    "ephemeral-pulumi-deploy>=0.0.6",
    "lab-auto-pulumi>=0.2.0",
    "boto3>=1.42.92",
    "boto3-stubs[all]>=1.42.92",
    "pydantic>=2.13.3",
]

[tool.uv]
package = true
